<resources>
    <string name="app_name" translatable="false">BreBeStore</string>
    <string name="about">Sobre</string>
    <string name="settings">Configurações</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="home">Página Inicial</string>
    <string name="cart">Carrinho</string>
    <string name="profile">"Perfil "</string>
    <string name="products">Produtos</string>
    <string name="aboutAPP">Esse aplicativo foi desenvolvido para a matéria de Programação para dispositivos moveis, do 6º Semestre de BCC do Senac.</string>
    <string name="developedBy">Desenvolvido por: Beatriz Paiva e Lucas Breur</string>
    <string name="contactUs">Entre em contato conosco</string>

    <string name="theme">Tema</string>
    <string name="themeChoice">Escolha o tema:</string>
    <string name="darkTheme">Tema escuro</string>
    <string name="lightTheme">Tema claro</string>

    <string name="language">Linguagem</string>
    <string name="languageChoice">Escolha a linguagem:</string>
    <string name="ptBr">Portugues - Brasil</string>
    <string name="enUs">Inglês</string>

    <string name="logout">Sair</string>
    <string name="purshasedHistory">Histórico de compras</string>

    <string name="welcome">Seja bem-vindo</string>
    <string name="storeName"> BreBe Modas</string>
    <string name="login">Entrar</string>
    <string name="signon">Cadastrar</string>

    <string name="open_menu">Abrir Menu</string>
    <string name="close_menu">Fechar Menu</string>

    <!--Home CARD -->
    <string name="buy">Comprar</string>
    <string name="product">Produto</string>
    <string name="price">Preço</string>
    <string name="desc">Descrição</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>