<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="none">
        <item
            android:id="@+id/home"
            android:icon="@drawable/round_home_black_48"
            android:title="@string/home"
            app:showAsAction="always" />
        <item
            android:id="@+id/cart"
            android:icon="@drawable/ic_round_shopping_cart_24"
            android:title="@string/cart"
            app:showAsAction="always" />
        <item
            android:id="@+id/profile"
            android:icon="@drawable/ic_round_account_circle_24"
            android:title="@string/profile"
            app:showAsAction="always" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_round_info_24"
            android:title="@string/about"
            app:showAsAction="ifRoom" />
    </group>

</menu>