<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AboutActivity">

    <TextView
        android:id="@+id/txtaboutApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/aboutAPP"
        android:textColor="@color/textPrimary"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imgSenac"
        android:layout_width="168dp"
        android:layout_height="157dp"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:adjustViewBounds="false"
        app:srcCompat="@mipmap/ic_senaclogo" />

    <TextView
        android:id="@+id/txtContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/contactUs"
        android:textColor="@color/textPrimary"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/imgGitHub"
                android:layout_width="46dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.137"
                app:layout_constraintStart_toEndOf="@+id/imgEmail"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_code_24" />

            <ImageView
                android:id="@+id/imgEmail"
                android:layout_width="46dp"
                android:layout_height="37dp"
                android:layout_gravity="center"
                android:layout_marginStart="144dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_round_email_24" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/txtGroup"
        android:layout_width="364dp"
        android:layout_height="74dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="40dp"
        android:text="@string/developedBy"
        android:textColor="@color/textPrimary"
        android:textSize="25sp" />

</LinearLayout>